[package]
name = "poa_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
actix-web = "4"
rsa = "0.5.0"
base64 = "0.13.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.3"
md5 = "0.7.0"
openssl = "0.10.64"